--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
   border: 0;
   box-sizing: border-box;
 }
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh; /* Set minimum height to viewport height */
+}
 body{
   background: linear-gradient(109.6deg, rgb(0, 204, 130) 11.2%, rgb(58, 181, 46) 91.7%);
   margin-top: auto; 
@@ -11,11 +17,19 @@ body{
 }
 
 main h2{
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 600;
+  font-family: "Spirax", system-ui;
+  font-weight: 800;
   font-style: normal;
-  color: white;
+  color: rgb(4, 153, 42);
   
+}
+#logoText{
+
+display: flex;
+flex-direction: row;
+align-items: center;
+gap: 1rem;
+
 }
 header div{
   display:flex ;
@@ -31,9 +45,41 @@ header div{
 .mainDiv{
   padding: 2rem;
   margin: 3rem;
-  max-width: 500px;
-  margin: auto;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
   border: solid 1px darkgreen;
-  border-radius: 2rem;  
-  background: #a2c11c;
+  border-radius: 2rem;    
+}
+#form1{
+  display: flex;
+  flex-direction: column;
+  gap: .55rem;
+}
+#form1 input{
+  border-bottom: solid 1px darkgreen ;
+  outline: none;
+}
+#form1 button{
+  margin-top: 2rem;
+  background:linear-gradient(109.6deg, rgb(0, 204, 130) 11.2%, rgb(58, 181, 46) 91.7%);
+  padding: .5rem;
+  border-radius: 5rem;
+  font-size: 1.52rem;
+}
+
+
+
+
+
+/* Styles for screens between 576px and 767.98px (Small devices) */
+@media (min-width: 200px) and (max-width: 767.98px) {
+  .mainDiv{
+    padding: 2rem;
+    margin-left: 2rem;
+    margin-right:2rem;
+    border: solid 1px darkgreen;
+    border-radius: 2rem;  
+
+  /* Your styles for small screens go here */
 }
