--- a/style.css
+++ b/style.css
@@ -68,6 +68,9 @@ header div{
   font-size: 1.52rem;
 }
 
+#passwordError1,#passwordError2,#nameError,#emailError {
+  color: red;
+}
 
 
 
@@ -79,7 +82,7 @@ header div{
     margin-left: 2rem;
     margin-right:2rem;
     border: solid 1px darkgreen;
-    border-radius: 2rem;  
+    border-radius: 2rem;  }
 
   /* Your styles for small screens go here */
 }
